<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CPEC</string>
    <string name="facebook_app_id">193960501160741</string>
    <string name="fb_login_protocol_scheme">fb193960501160741</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="introduction">INTRODUCTION</string>
    <string name="enter">ENTER</string>
    <string name="forgot">FORGOT PASSWORD?</string>
    <string name="connect">OR CONNECT VIA</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="loginn">Login</string>
    <string name="signupp">SIGN UP</string>
    <string name="signname">Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="cpec">A Revolution</string>
    <string name="cpeccontent">We have stated a revolution in real estate industry
        of Pakistan so everyone wants to standout. But the truth
        is not all do. When CPEC International was founded in
        Century 21st, they called us renegades. We were on an
        unapologetic mission to help the nation as well as foreign
        investors to keep more of what they earn. We are not
        like the others and neither are you.</string>
    <string name="gawadr">A Classic Evolution</string>
    <string name="gawadarcontent">As we step into a new era we pay homage to our roots
        and fearlessly walk into the future. Introducing the new brand
        family, engineered for today’s agents, buyers and sellers.
        </string>
    <string name="vision">Our Vision</string>
    <string name="visiondesc">To facilitate our clients in Pakistan with quality of services around the globe.</string>
    <string name="mission">Our Mission</string>
    <string name="missiondesc">No.1 in brand name awareness.
        No.1 in Global home sales.
        To Open worldwide Offices in 2023.</string>
    <string name="caliber">Our High Caliber</string>
    <string name="caliberdesc">We have always taken the stance that iron sharpens iron.
        So when it comes to agent quality. We attract the best.
        Now you know why more buyers and sellers would recommend
        CPEC International than any other real estate brokerage.</string>
    <string name="services">Our Services</string>
    <string name="servicesdes">24/7 Hours real estate services.
Transparent buying and selling rates and fair
        deals for buyers and sellers around the world.</string>


    <string name="next">NEXT</string>
    <string name="Sqr_Yard">Sqr Yard </string>
    <string name="phase">Phase</string>
    <string name="Phone">Phone</string>
    <string name="additionalinfo">ADDITIONAL INFORMATION</string>
    <string name="sub">SUBMIT</string>
    <string name="fav">MY FAVOURITES</string>
    <string name="myprpoerty">MY STOCKS</string>
    <string name="stk">STOCKS</string>
    <string name="availaible">AVAILABLE</string>
    <string name="sold">Sold</string>
    <string name="searchfilter">EXPLORE</string>
    <string name="gwadar">GWADAR</string>
    <string name="plotavalaible">Plot Available in New Town</string>
    <string name="pricetrends">PRICE TRENDS</string>
    <string name="selectcat">SELECT CATEGORY</string>

    <string name="squareyard">Square Yard</string>
    <string name="PURCHASE">PURCHASE</string>
    <string name="lease">LEASE</string>

    <string name="selecttype">SELECT TYPE</string>
    <string name="area">AREA</string>
    <string name="near">Near Location</string>
    <string name="price">Price</string>
    <string name="forsale">FOR SALE</string>
    <string name="trending">TRENDING</string>
    <string name="EXPLORE">EXPLORE</string>
    <string name="stocksa">Stocks Available</string>
    <string name="slocation">SELECT LOCATION</string>
    <string name="Favourite">Favorites</string>
    <string name="newsearch">New Search</string>
    <string name="addprpoerty">Add Stocks</string>
    <string name="myyprpoerty">My Stocks</string>
    <string name="contactv">CONTACT VIA</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="signout">Sign Out</string>
    <string name="areusure">Are you sure you want to sign out?</string>
    <string name="poweredby">Powered By</string>
    <string name="biz">BIZVENTURE</string>
    <string name="call">Do you want to call the owner?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title">Title</string>
    <string name="view">View</string>
    <string name="contact">Contact</string>
    <string name="sortby">Sort By</string>
    <string name="region">Region</string>
    <string name="sproperty">SELL YOUR PROPERTY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>