<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:id="@+id/topheader"
        android:background="@drawable/savabg"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/carrowback"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/arrowback"
            />
        <TextView
            android:textColor="#fff"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELL YOUR STOCK"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@+id/topheader"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    >

    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:id="@+id/newtitle"
        android:hint="Title"
        android:paddingLeft="@dimen/_15sdp"
        />
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="#000000"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="SELECT PROPERTY TYPE"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"


            android:src="@drawable/indutrialicon"
            android:id="@+id/indusbtn"
            />
        <ImageView
            android:id="@+id/redbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"

            android:src="@drawable/unselectedresidential"
            />
        <ImageView
            android:id="@+id/comertialbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/unselectedcommertial"
            />
        <ImageView
            android:id="@+id/openlandbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/unselectedopenland"
            />
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/_9sdp"-->
            <!--android:layout_marginLeft="@dimen/_5sdp"-->
            <!--android:text="Industrial"-->

            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Residential"-->
            <!--android:textSize="@dimen/_9sdp"-->
            <!--android:layout_marginLeft="@dimen/_10sdp"-->

            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Commercial"-->
            <!--android:textSize="@dimen/_9sdp"-->
            <!--android:layout_marginLeft="@dimen/_10sdp"-->

            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Open Land"-->
            <!--android:textSize="@dimen/_9sdp"-->
            <!--android:layout_marginLeft="@dimen/_10sdp"-->

            <!--/>-->

    <!--</LinearLayout>-->
    <Spinner
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/_15sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/spinnerback"

        android:hint="Area"
        android:id="@+id/commertialarea"
        />
    <Spinner
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/_15sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:visibility="gone"
        android:id="@+id/commertiallocation"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/Sqr_Yard"
        android:id="@+id/titletext"
        android:paddingLeft="@dimen/_15sdp"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:id="@+id/ppricetext"

        android:paddingLeft="@dimen/_15sdp"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/phase"
        android:id="@+id/phasetext"
        android:paddingLeft="@dimen/_15sdp"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/near"
        android:id="@+id/neartext"

        android:paddingLeft="@dimen/_15sdp"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/_15sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/signname"
        android:id="@+id/commertialname"
        />
    <EditText
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/_15sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        android:id="@+id/commertialphone"
        />

    <TextView
        android:layout_marginTop="@dimen/_15sdp"

        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/additionalinfo"
        />
        <EditText
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/commertialadditional"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:lines="5"
            android:background="@drawable/additionback"
            />
   <Button
       android:layout_marginTop="@dimen/_15sdp"
       android:layout_marginBottom="@dimen/_8sdp"
       android:layout_width="@dimen/_100sdp"
       android:layout_height="@dimen/_50sdp"
       android:text="@string/sub"
       android:textSize="@dimen/_18sdp"
       android:textColor="#FFFFFF"
       android:background="@drawable/submitbuton"
       android:id="@+id/commertialsubmit"
       android:layout_gravity="center_horizontal"
       />
</LinearLayout>
    </ScrollView>
</RelativeLayout>