<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.fm.cpec.Home">
    <RelativeLayout
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/explore_top_view"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:id="@+id/topheader"
        android:background="@drawable/savabg"

        >
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/searchhomeback"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/arrowback"
            />
        <TextView
            android:id="@+id/titleplotreserachfiltermain"
            android:textColor="#fff"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stk"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:id="@+id/belowheader"
        android:layout_below="@+id/topheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="#fff"
            android:text="@string/availaible"
            android:id="@+id/available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
        <Button
            android:background="#663333"
            android:text="@string/sold"
            android:id="@+id/sold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:indeterminateDrawable="@drawable/progress" >
    </ProgressBar>
    <FrameLayout
        android:layout_below="@+id/belowheader"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

</RelativeLayout>
